--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,17 @@ a {
   text-align: center;
 }
 
+.main-div{
+  padding:5px;
+}
+
+@media only screen and (min-width: 900px) {
+  .main-div{
+    padding:50px;
+  }
+}
+
+
 .bolder {
   font-weight: 500 !important;
 }
